# dependency_gamepad_lib

./: CMakeLists.txt
include/: gamepad.h
src/: gamepad.cpp  gamepad_test.cpp
